<resources>
    <string name="app_name">Pro Planner Plus</string>

    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>

    <string name="already_have_account">Already have an account?</string>

    <string name="not_registered">Not registered yet?</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="task_title">Task title</string>
    <string name="task_description">Task description</string>
    <string name="step_goal">Step goal</string>
    <string name="step_length">Step length</string>
    <string name="task_date_end">Task date end</string>
    <string name="task_group">Task group</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="task_image">Task image</string>
    <string name="logo">Logo</string>
    <string name="addtaskbutton">addTaskButton</string>
    <string name="menubutton">menuButton</string>
    <string name="task_list">Task List</string>
    <string name="app_settings">App Settings</string>
    <string name="user_settings">User Settings</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_new_email">Confirm New Email</string>
    <string name="current_password">Current Password</string>
    <string name="change_email">Change Email</string>
    <string name="increase_steps_button_description">Increase steps for task</string>
    <string name="task_title_hint">e.g. Assignment 3</string>
    <string name="task_description_hint">e.g. Do assignment 3 for the next Python class.</string>
    <string name="step_goal_hint">5</string>
    <string name="step_length_hint">30</string>
    <string name="task_date_end_hint">12/09/2024</string>
    <string name="task_group_hint">e.g. Uni</string>
    <string name="list_with_tasks">Tasks list</string>
    <string name="group_filter_list">Group filter list</string>
    <string name="task_done">Task done</string>
    <string name="register_here">Register here!</string>
    <string name="login_here">Login here!</string>
    <string name="welcome_nto_pro_planner_plus">Welcome\nto Pro Planner Plus!</string>
    <string name="rise_and_shine_nyour_to_dos_are_waiting_for_their_superhero_you">Rise and shine!\nYour to-dos are waiting for their superhero – You!</string>
    <string name="motivation_login">Your to-dos believe in you. Time to show them who\'s the boss!</string>
    <string name="motivation_text_register">Time to make your to-do list smile! Add tasks and let the productivity party begin!</string>
    <string name="x">x</string>
    <string name="min">min.</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_background_color">Change background color</string>
    <string name="change_font_color">Change font color</string>
    <string name="change_font_size">Change font size</string>
</resources>