<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/logo"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/logo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_foreground"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_foreground"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout_foreground"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>
