<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
        
        <EditText
                android:id="@+id/etCurrentEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_email"/>

        <EditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"/>

        <EditText
                android:id="@+id/etNewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_email"/>

        <EditText
                android:id="@+id/etConfirmNewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_email" />

        <Button
                android:id="@+id/btnChangeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_email" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>