<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="48dp"
        android:text="@string/login_here"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/motivationTextMain"
        app:layout_constraintTop_toTopOf="@+id/buttonRegister" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="48dp"
        android:text="@string/register_here"
        app:layout_constraintEnd_toEndOf="@+id/motivationTextMain"
        app:layout_constraintTop_toBottomOf="@+id/motivationTextMain" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/borel"
        android:gravity="center"
        android:text="@string/welcome_nto_pro_planner_plus"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/motivationTextMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/borel"
        android:gravity="center"
        android:text="@string/rise_and_shine_nyour_to_dos_are_waiting_for_their_superhero_you"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/welcomeText"
        app:layout_constraintStart_toStartOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
</androidx.constraintlayout.widget.ConstraintLayout>

<!--src: https://prestontaylorministries.org/in-search-of-peace/-->